Se agregan cambios para nota de firmantes y parte de pagina inicial de predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -27981,4 +27981,57 @@ vehiculos.detalle.opuso.2=Corrección
 firmas.natural.nota=Si la declaración requiere más de una firma, selecciona el botón “firmar y agregar”, de lo contrario selecciona únicamente el botón “solo firmar”
 firmas.natural.nota2=Para continuar con el proceso de declaración debe seleccionar el botón de “agregar firmantes”
 
+#se agregan etiquetas para pantalla inicial de predial
+
+predial.inicial.table.titulo= Impuesto de Predial
+predial.inicial.table.descripcion= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital. Más información La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predial.inicial.table.buscar=Buscar CHIP:
+predial.inicial.table.chip= CHIP
+predial.inicial.table.matinmo=Matricula inmobiliaria
+predial.inicial.table.dir=Direscción del predio
+predial.inicial.table.nocotrato=No. Contrato arrendamiento
+
+predial.inicial.juridicos.titulo= Datos jurídicos
+predial.inicial.juridicos.tipdoc=Tipo de documento
+predial.inicial.juridicos.numdoc=Número de documento
+predial.inicial.juridicos.nomcom=Nombre completo
+predial.inicial.juridicos.calsuj=Calidad de sujeción
+predial.inicial.juridicos.propiedad=% de propiedad
+predial.inicial.juridicos.otros=Otros
+
+predial.inicial.economicos.titulo=Datos económicos
+predial.inicial.economicos.base=Base gravable
+predial.inicial.economicos.avcatastral=Avalúo catastral
+predial.inicial.economicos.avcontrato=Avalúo contrato arriendo
+predial.inicial.economicos.avmejora=Avalúo mejora construcción
+
+predial.inicial.fisicos.titulo=Datos fisicos
+predial.inicial.fisicos.arconstruida=Área construida catastro
+predial.inicial.fisicos.arterreno=Área terreno catastro
+predial.inicial.fisicos.codestrato=Código estrato
+predial.inicial.fisicos.armejora=Área terreno mejora contribuyente
+predial.inicial.fisicos.armatriz=Área terreno matriz mejora
+predial.inicial.fisicos.arcatastro=Área terreno mejora catastro
+
+predial.inicial.liquidación.titulo=Liquidación
+predial.inicial.liquidación.base=Base gravable
+predial.inicial.liquidación.destino=Destino hacendario
+predial.inicial.liquidación.tarifa=Tarifa liquidación
+predial.inicial.liquidación.valor=Valor impuesto
+
+predial.inicial.marcas.titulo=Marcas
+predial.inicial.marcas.marca=Marca
+predial.inicial.marcas.tipmarca=tipo de marca
+predial.inicial.marcas.pormarca=% de marca
+predial.inicial.marcas.valex=Valor exención
+predial.inicial.marcas.conservacion=Conservación historica
+predial.inicial.marcas.btnregresar=Regresar
+predial.inicial.marcas.btndescar=Descarga de factura vigencia actual
+predial.inicial.marcas.generar=Generar declaración
+
+
+
+
+
+
 
