Se agrega la página princila de predio

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -27990,6 +27990,7 @@ predial.inicial.table.chip= CHIP
 predial.inicial.table.matinmo=Matricula inmobiliaria
 predial.inicial.table.dir=Direscción del predio
 predial.inicial.table.nocotrato=No. Contrato arrendamiento
+predial.inicial.table.ver=Ver detalle
 
 predial.inicial.juridicos.titulo= Datos jurídicos
 predial.inicial.juridicos.tipdoc=Tipo de documento
@@ -28013,11 +28014,11 @@ predial.inicial.fisicos.armejora=Área terreno mejora contribuyente
 predial.inicial.fisicos.armatriz=Área terreno matriz mejora
 predial.inicial.fisicos.arcatastro=Área terreno mejora catastro
 
-predial.inicial.liquidación.titulo=Liquidación
-predial.inicial.liquidación.base=Base gravable
-predial.inicial.liquidación.destino=Destino hacendario
-predial.inicial.liquidación.tarifa=Tarifa liquidación
-predial.inicial.liquidación.valor=Valor impuesto
+predial.inicial.liquidacion.titulo=Liquidación
+predial.inicial.liquidacion.base=Base gravable
+predial.inicial.liquidacion.destino=Destino hacendario
+predial.inicial.liquidacion.tarifa=Tarifa liquidación
+predial.inicial.liquidacion.valor=Valor impuesto
 
 predial.inicial.marcas.titulo=Marcas
 predial.inicial.marcas.marca=Marca
