Se agregan cambios a etiquetas presntar declaracion y generar declaracion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2596,7 +2596,7 @@ declaracion.publicidad.nombreyrazon= Apellidos y Nombres o Razón Social
 declaracion.publicidad.pago= Pago
 declaracion.publicidad.button.gendecl= Generar Declaración
 declaracion.publicidad.button.crenewdec= Crear Nueva Declaración
-declaracion.publicidad.button.presdec= Generar Declaración
+declaracion.publicidad.button.presdec= Presentar Declaración
 declaracion.publicidad.button.pag= Pagar
 
 register.id.types.CC=CC Cédula de Ciudadanía
@@ -2896,7 +2896,7 @@ impuestos.decGasolina.InformacionFirma.Firma = FIRMA
 impuestos.decGasolina.Pago.titulo = Pago
 impuestos.decGasolina.Pago.GenerarDec = Generar Declaración
 impuestos.decGasolina.Pago.crearNuevaDec = Crear nueva Declaración
-impuestos.decGasolina.Pago.PresentarDec = Generar Declaración
+impuestos.decGasolina.Pago.PresentarDec = Presentar Declaración
 impuestos.decGasolina.Pago.Pagar = Pagar en línea
 impuestos.decGasolina.Pago.Regresar = Regresar
 impuestos.decGasolina.Pago.nota = *Nota: Recuerde que el pago de este impuesto, únicamente se realiza a través de "Pago en línea"
@@ -2912,7 +2912,7 @@ impuestos.sobreTasaGasolina.menu.buscar = Buscar
 impuestos.sobreTasaGasolina.menu.tipoDocumento = Tipo de Documento
 impuestos.sobreTasaGasolina.menu.numeroDocumento = Número de Documento
 impuestos.sobreTasaGasolina.menu.seleccionar = Seleccionar
-impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Generar Declaración
+impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Generar Declaración vigencia actual
 impuestos.sobreTasaGasolina.menu.rop = ROP
 impuestos.sobreTasaGasolina.menu.pagoEnLinea = Pago en Línea
 impuestos.sobreTasaGasolina.menu.nombre= Nombre
@@ -3117,13 +3117,13 @@ delineacion.urbana.dec.firm.tipiden=Tipo de identificación
 delineacion.urbana.dec.firm.numide=Número de identificación
 delineacion.urbana.dec.firm.nombraz=Apellidos y Nombres o Razón Social
 delineacion.urbana.dec.firm.firma=Firma
-delineacion.urbana.dec.firm.predec=Generar declaración
+delineacion.urbana.dec.firm.predec=Presentar declaración
 delineacion.urbana.dec.firm.paglin=Pagar en línea
 delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
 delineacion.urbana.dec.firm.prerete= Generar retención
-delineacion.urbana.dec.firm.predec= Generar declaración
-delineacion.urbana.radicados.generar.declaracion= Generar declaración vigencia actual
+delineacion.urbana.dec.firm.predec= Presentar declaración
+delineacion.urbana.radicados.generar.declaracion= Generar declaración
 delineacion.urbana.radicados.generar.retencion=Generar retención
 
 delineacion.urbana.radicados.nota.importante= Importante
@@ -4132,7 +4132,7 @@ ica.declaracion.firma.numide=No. Identificación
 ica.declaracion.firma.numtarjeta=No. tarjeta profesional
 ica.declaracion.firma.nombre=Nombre
 ica.declaracion.firma.regresar=Regresar
-ica.declaracion.firma.prendecla=Generar declaración
+ica.declaracion.firma.prendecla=Presentar declaración
 ica.declaracion.firma.pagliena=Pagar en línea
 
 ica.declaracion.regimen.r1=RÉGIMEN SIMPLIFICADO
@@ -5002,7 +5002,7 @@ predialuno.firma.titulo=Información firma del declarante
 predialuno.firma.tipiden=Tipo de Identificación
 predialuno.firma.noiden=No. Identificación
 predialuno.firma.nombre=Apellidos y Nombres o Razón social
-predialuno.firma.presendecla=Generar Declaración
+predialuno.firma.presendecla=Generar Declaración vigencia actual
 predialuno.firma.paglinea=Pagar en línea
 predialuno.firma.spac=SPAC
 
@@ -5044,7 +5044,7 @@ predialdos.firma.titulo=Información firma del declarante
 predialdos.firma.tipiden=Tipo de Identificación
 predialdos.firma.noiden=No. Identificación
 predialdos.firma.nombre=Apellidos y Nombres o Razón social
-predialdos.firma.presendecla=Generar Declaración
+predialdos.firma.presendecla=Generar Declaración vigencia actual
 predialdos.firma.paglinea=Pagar en línea
 predialdos.firma.spac=SPAC
 
@@ -5092,7 +5092,7 @@ predialtres.firma.titulo=Información firma del declarante
 predialtres.firma.tipiden=Tipo de Identificación
 predialtres.firma.noiden=No. Identificación
 predialtres.firma.nombre=Apellidos y Nombres o Razón social
-predialtres.firma.presendecla=Generar Declaración
+predialtres.firma.presendecla=Generar Declaración vigencia actual
 predialtres.firma.paglinea=Pagar en línea
 predialtres.firma.spac=SPAC
 
@@ -5142,7 +5142,7 @@ predialcuatro.firma.titulo=Información firma del declarante
 predialcuatro.firma.tipiden=Tipo de Identificación
 predialcuatro.firma.noiden=No. Identificación
 predialcuatro.firma.nombre=Apellidos y Nombres o Razón social
-predialcuatro.firma.presendecla=Generar Declaración
+predialcuatro.firma.presendecla=Generar Declaración vigencia actual
 predialcuatro.firma.paglinea=Pagar en línea
 predialcuatro.firma.spac=SPAC
 
@@ -5187,7 +5187,7 @@ predialcinco.firma.titulo=Información firma del declarante
 predialcinco.firma.tipiden=Tipo de Identificación
 predialcinco.firma.noiden=No. Identificación
 predialcinco.firma.nombre=Apellidos y Nombres o Razón social
-predialcinco.firma.presendecla=Generar Declaración
+predialcinco.firma.presendecla=Generar Declaración vigencia actual
 predialcinco.firma.paglinea=Pagar en línea
 predialcinco.firma.spac=SPAC
 
@@ -5355,7 +5355,7 @@ predial.basespresun.firma.titulo=Información firma del declarante
 predial.basespresun.firma.tipiden=Tipo de Identificación
 predial.basespresun.firma.noiden=No. Identificación
 predial.basespresun.firma.nombre=Apellidos y Nombres o Razón social
-predial.basespresun.firma.presendecla=Generar Declaración
+predial.basespresun.firma.presendecla=Generar Declaración vigencia actual
 predial.basespresun.firma.paglinea=Pagar en línea
 predial.basespresun.firma.spac=SPAC
 
