Se argegan cambios a Campo de valor excencion para delineación urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2594,7 +2594,7 @@ declaracion.publicidad.tipoiden= Tipo de identificación
 declaracion.publicidad.numidenti= No. de identificación
 declaracion.publicidad.nombreyrazon= Apellidos y Nombres o Razón Social
 declaracion.publicidad.pago= Pago
-declaracion.publicidad.button.gendecl= Generar Declaración
+declaracion.publicidad.button.gendecl= Presentar declaración
 declaracion.publicidad.button.crenewdec= Crear Nueva Declaración
 declaracion.publicidad.button.presdec= Presentar Declaración
 declaracion.publicidad.button.pag= Pagar
@@ -2803,7 +2803,7 @@ declaracion.publicidad.nombreyrazon= Apellidos y Nombres o Razón Social
 declaracion.publicidad.pago= Pago
 declaracion.publicidad.button.gendecl= Generar Declaración
 declaracion.publicidad.button.crenewdec= Crear Nueva Declaración
-declaracion.publicidad.button.presdec= Generar Declaración
+declaracion.publicidad.button.presdec= Presentar Declaración
 
 #->FIN dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 declaracion.publicidad.button.pago.linea= Pagar en Línea
