Agente autorizado (listra de declaraciones pendientes) Ajuste en descripcion de periodo para gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4956,6 +4956,21 @@ autorizado.periodo.mes.reteIca.10=Septiembre-Octubre
 autorizado.periodo.mes.reteIca.11=Noviembre-Diciembre
 autorizado.periodo.mes.reteIca.12=Noviembre-Diciembre
 
+autorizado.periodo.mes.="-"
+autorizado.periodo.mes.00="-"
+autorizado.periodo.mes.01=Enero
+autorizado.periodo.mes.02=Febrero
+autorizado.periodo.mes.03=Marzo
+autorizado.periodo.mes.04=Abril
+autorizado.periodo.mes.05=Mayo
+autorizado.periodo.mes.06=Junio
+autorizado.periodo.mes.07=Julio
+autorizado.periodo.mes.08=Agosto
+autorizado.periodo.mes.09=Septiembre
+autorizado.periodo.mes.10=Octubre
+autorizado.periodo.mes.11=Noviembre
+autorizado.periodo.mes.12=Diciembre
+
 declaracion.inicial.titulo= Declaraciones
 
 
