--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1385,6 +1385,8 @@ text.account.profile.gasolina= Impuestos de Motores a Gasolina
 text.account.profile.gasolina.declaracion= Declaración impuestos de Motores a Gasolina
 text.account.profile.certipagos= Certificación de pagos
 text.account.profile.arCertipagos= Certificación de pagos
+text.account.profile.certiDeclara = Certificaciones de Declaración
+text.account.profile.declaraciones= Declaraciones
 text.account.profile.declarafirm= Lista de Declaraciones a Firmar
 text.account.profile.delineacion= Impuestos de Delineación Urbana
 text.account.profile.buzon= Mi Buzón
@@ -1393,6 +1395,9 @@ text.account.profile.arOblipendienetes= Obligaciones
 text.account.profile.relapagos= Relación de Pagos
 text.account.profile.arRelapagos= Relación de Pagos
 text.account.profile.vehiculos= Impuestos de Vehículos
+text.account.profile.vehiculos.declaracion= Impuestos de vehículos declaración
+text.account.profile.descargaFac= Descarga factura
+text.account.profile.reexpedicionFac=Reexpedición de factura
 text.account.profile.estadocuenta= Estado de Cuenta
 text.account.profile.arEstadocuenta= Estado de Cuenta
 text.account.profile.declarapublicidad= Declaración Publicidad Exterior
