Presentar Declaracion (publicidad exterior) Mostrar mensaje cuando no hay datos para la seleccion - mensaje de error

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2989,6 +2989,7 @@ error.impuestoGasolina.sobretasa.error4 = Error al leer detalle de pago {0}
 error.impuestoDU.info.error = Error al leer  de delineación urbana
 error.impuestoDU.calculo.error = Error al leer calculo de impuestos de delineación urbana
 #->FIN dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
+error.presentarDeclaracion.publicidadExt.listaVacia = No cuenta con información para este periodo
 #->INI dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 consultas.estadoDeCuenta.tipoConsulta = Tipo
 consultas.estadoDeCuenta.impuesto = Impuesto
