Se agregan cambios para Delineacion urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3102,7 +3102,7 @@ delineacion.urbana.dec.liqpriv.intermora= Interés de mora
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
 delineacion.urbana.radicados.declara=Generar declaración
-delineacion.urbana.radicados.retencion.generar=Generar retención
+delineacion.urbana.radicados.retencion.generar=Presentar retención
 delineacion.urbana.radicados.declaracion.pdf=Generar PDF
 
 delineacion.urbana.dec.liqpriv.costdire=Costos directos de obra
@@ -3127,7 +3127,7 @@ delineacion.urbana.dec.firm.predec=Presentar declaración
 delineacion.urbana.dec.firm.paglin=Pagar en línea
 delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
-delineacion.urbana.dec.firm.prerete= Generar retención
+delineacion.urbana.dec.firm.prerete= Presentar retención
 delineacion.urbana.dec.firm.predec= Presentar declaración
 delineacion.urbana.radicados.generar.declaracion= Generar declaración
 delineacion.urbana.radicados.generar.retencion=Generar retención
