--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4563,6 +4563,7 @@ tramites.crear.inicial.selarch=Seleccionar archivo
 tramites.crear.inicial.adjdoc=Nombre documento
 tramites.crear.inicial.adj=Adjuntar
 tramites.crear.inicial.correo=Correo electrónico
+tramites.crear.inicial.rol=Rol
 
 
 tramites.seguimiento.inicial.titulo=Trámites
