Ajuste para boton Imprimir certificado, cuando esta en un rol de tercero

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3004,6 +3004,7 @@ error.impuestoDelineacion.calculoImpuesto.error1.attrib1 = {0}
 #->FIN dev-federico 12/04/2019 textos para Delineacion urbana
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
+mensaje.Pago.PSE.mensaje1 = La impresion de certificado se realiza con usuario del contribuyente o usuario NIT
 error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
