Se agregan cambios apra vehicular

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3165,7 +3165,7 @@ sobre.vehiculo.detail.clasanti= Clásico o Antiguo
 sobre.vehiculo.detail.tipvehiculo=Tipo de vehículo
 sobre.vehiculo.detail.cappasa= Capacidad pasajeros
 sobre.vehiculo.detail.capton= Capacidad toneladas
-sobre.vehiculo.detail.fecinacti=Fecha de inactivación
+sobre.vehiculo.detail.fecinacti=Fecha de estado
 sobre.vehiculo.detail.feccambio= Fecha cambio servicio
 sobre.vehiculo.detail.feccance= Fecha cancelación
 
