Ajuste de textos menu declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2956,8 +2956,11 @@ impuestos.sobreTasaGasolina.representantes.detalleanteriores= Consulta tu detall
 #->INI dev-federico 7/02/2019 textos para Presentar Declaración
 impuestos.presentarDeclaracion.impuesto = Impuesto
 impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable
+impuestos.presentarDeclaracion.anioGravableConsultarUpper = AÑO GRAVABLE
 impuestos.presentarDeclaracion.Periodo = Periodo
 impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
+impuestos.presentarDeclaracion.PresentarDeclaracionUpper = PRESENTAR DELCARACIÓN
+impuestos.presentarDeclaracion.seleccionaAnio = Selecciona el año gravable.
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
 #->INI dev-maria 18/04/2019 textos para Presentar Declaración
 impuestos.presentarDeclaracion.deliur.cdu=CDU
