--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2958,7 +2958,7 @@ impuestos.presentarDeclaracion.impuesto = Impuesto
 impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable
 impuestos.presentarDeclaracion.anioGravableConsultarUpper = AÑO GRAVABLE
 impuestos.presentarDeclaracion.Periodo = Periodo
-impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
+impuestos.presentarDeclaracion.PresentarDeclaracion = Generar declaración
 impuestos.presentarDeclaracion.PresentarDeclaracionUpper = PRESENTAR DELCARACIÓN
 impuestos.presentarDeclaracion.seleccionaAnio = Selecciona el año gravable.
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
