--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28011,7 +28011,7 @@ predial.inicial.table.descripcion= El Impuesto Predial Unificado lo pagan todos 
 predial.inicial.table.buscar=Buscar CHIP:
 predial.inicial.table.chip= CHIP
 predial.inicial.table.matinmo=Matricula inmobiliaria
-predial.inicial.table.dir=Direscción del predio
+predial.inicial.table.dir=Dirección del predio
 predial.inicial.table.nocotrato=No. Contrato arrendamiento
 predial.inicial.table.ver=Ver detalle
 
