Se agregan cambios para corrección de Breadcrumbs en los roles

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -570,6 +570,9 @@ breadcrumb.reportante=Reportante
 breadcrumb.reportante.carga=Carga de Documentos
 breadcrumb.reportante.historico=Histórico de reportes
 breadcrumb.reportante.sanciones=Sanciones impuestas
+breadcrumb.miRITREPO= Mi RIT
+breadcrumb.certificacionRETE= Certificación RIT
+breadcrumb.certificacionREPO= Certificación RIT
 #->FIN dev-eduardo Pantalla de menu MiRIT->Certificacion 19/01/2019
 
 
@@ -1387,9 +1390,12 @@ text.account.profile.certipagos= Certificación de pagos
 text.account.profile.arCertipagos= Certificación de pagos
 text.account.profile.certiDeclara = Certificaciones de Declaración
 text.account.profile.declaraciones= Declaraciones
+text.account.profile.declaraciones2= Declaraciones
 text.account.profile.declarafirm= Lista de Declaraciones a Firmar
 text.account.profile.delineacion= Impuestos de Delineación Urbana
 text.account.profile.buzon= Mi Buzón
+text.account.profile.buzonRETE= Mi Buzón
+text.account.profile.buzonREPO= Mi Buzón
 text.account.profile.oblipendienetes= Obligaciones
 text.account.profile.arOblipendienetes= Obligaciones
 text.account.profile.relapagos= Relación de Pagos
