Se agregan cambios para paginación de tabla predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28022,7 +28022,7 @@ predial.inicial.table.chip= CHIP
 predial.inicial.table.matinmo=Matricula inmobiliaria
 predial.inicial.table.dir=Dirección del predio
 predial.inicial.table.nocotrato=No. Contrato arrendamiento
-predial.inicial.table.ver=Ver detalle
+predial.inicial.table.ver=Ver
 
 predial.inicial.juridicos.titulo= Datos jurídicos
 predial.inicial.juridicos.tipdoc=Tipo de documento
