Se agrega cambio de etiqueta para tabla de actividades ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3998,7 +3998,7 @@ ica.inicial.activecono.actprin=Actividad económica
 ica.inicial.activecono.ciiu=Código CIIU
 ica.inicial.activecono.denomi=Denominación de actividad económica
 ica.inicial.activecono.feciniact=Fecha de inicio de actividades
-ica.inicial.activecono.fecceseact=Fecha de cese de actividades
+ica.inicial.activecono.fecceseact=Fecha de fin de actividades
 ica.inicial.activecono.principal= Principal
 
 ica.inicial.estableci.title=Establecimiento
@@ -4039,8 +4039,10 @@ ica.inicial.representantes.regresar=Regresar
 ica.inicial.representantes.presendecla=Generar Declaración Vigencia Actual
 ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
+
 ica.inicial.representantes.nota1= Nota:
-ica.inicial.representantes.nota2=“Para generar declaraciones de otras vigencias ingresa por “Declaraciones” en la parte superior de la pantalla”
+ica.inicial.representantes.nota2=Para generar una declaración de corrección o una declaración inicial de una vigencia diferente a la actual, ingrese  por el botón “declaraciones” en la parte superior de la pantalla
+
 
 ica.declaracion.title=Declaración ICA
 ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
@@ -28062,7 +28064,8 @@ predial.inicial.marcas.btnregresar=Regresar
 predial.inicial.marcas.btndescar=Descarga de factura vigencia actual
 predial.inicial.marcas.generar=Generar declaración
 
-
+impuestos.presentarDeclaracion.notaPredial=Ya se ha generado una factura por ese año gravable, ingresa al menú “facturación” para descargar la factura”, si ya fue generada una factura por ese periodo.
+impuestos.presentarDeclaracion.notaOtros= Si va a generar una declaración de corrección ingrese el impuesto, año gravable y periodo de la declaración inicial presentada.
 
 
 
