se corrige etiqueta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3998,7 +3998,7 @@ ica.inicial.activecono.actprin=Actividad económica
 ica.inicial.activecono.ciiu=Código CIIU
 ica.inicial.activecono.denomi=Denominación de actividad económica
 ica.inicial.activecono.feciniact=Fecha de inicio de actividades
-ica.inicial.activecono.fecceseact=Fecha de fin de actividades
+ica.inicial.activecono.fecceseact=Fecha fin de actividades
 ica.inicial.activecono.principal= Principal
 
 ica.inicial.estableci.title=Establecimiento
