Declaraciones (presentar declaracion) Ajuste para considerar la periodicidad del impuesto ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2965,7 +2965,7 @@ impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable
 impuestos.presentarDeclaracion.anioGravableConsultarUpper = AÑO GRAVABLE
 impuestos.presentarDeclaracion.Periodo = Periodo
 impuestos.presentarDeclaracion.PresentarDeclaracion = Generar declaración
-impuestos.presentarDeclaracion.PresentarDeclaracionUpper = PRESENTAR DELCARACIÓN
+impuestos.presentarDeclaracion.PresentarDeclaracionUpper = PRESENTAR DECLARACIÓN
 impuestos.presentarDeclaracion.seleccionaAnio = Selecciona el año gravable.
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
 #->INI dev-maria 18/04/2019 textos para Presentar Declaración
