--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4041,8 +4041,7 @@ ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
 
 ica.inicial.representantes.nota1= Nota:
-ica.inicial.representantes.nota2=Para generar una declaración de corrección o una declaración inicial de una vigencia diferente a la actual, ingrese  por el botón “declaraciones” en la parte superior de la pantalla
-
+ica.inicial.representantes.nota2= Para generar una declaración de corrección o una declaración inicial de una vigencia diferente a la actual, ingrese  por el botón Declaraciones en la parte superior de la pantalla.
 
 ica.declaracion.title=Declaración ICA
 ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
