MiRit (mis impuestos) se agrega la seccion correspondiente a los datos de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2784,6 +2784,9 @@ mirit.exterior.publicity.tipoValla=Tipo de valla
 
 mirit.gas.tax.title=Impuesto Sobretasa a la Gasolina Motor
 mirit.gas.tax.numDoc=Número de documento
+mirit.gas.tax.numObjeto=Número de objeto
+
+mirit.sobrevehiculo.tax.title=Impuestos de vehículos
 
 #->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 declaracion.publicidad.titulo= Declaración de Publicidad Exterior
