--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2787,6 +2787,7 @@ mirit.gas.tax.numDoc=Número de documento
 mirit.gas.tax.numObjeto=Número de objeto
 
 mirit.sobrevehiculo.tax.title=Impuestos de vehículos
+mirit.delineacionurbana.tax.title=Impuestos de Delineación Urbana
 
 #->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 declaracion.publicidad.titulo= Declaración de Publicidad Exterior
