Ajuste de alertas delineación y ajuste para bloque de boton de gestion bancaria

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2981,7 +2981,9 @@ impuestos.presentarDeclaracion.deliur.radic=Radicados
 impuestos.presentarDeclaracion.deliur.prereten=Presentar retención
 #->FIN dev-maria 18/04/2019 textos para Presentar Declaración
 
+impuestos.presentarDeclaracion.deliur.tituloNota1=Anticipo Delineación:
 impuestos.presentarDeclaracion.deliur.nota1=Recuerda que el año gravable debe ser el mismo que, el año gravable del radicado sobre el cual se va a realizar la retención.
+impuestos.presentarDeclaracion.deliur.tituloNota2=Declaración Delineación:
 impuestos.presentarDeclaracion.deliur.nota2=Recuerda que el año gravable para presentar la declaración,  es el mismo año de la ejecutoria de la primera licencia.
 
 
