--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3118,7 +3118,7 @@ delineacion.urbana.dec.liqpriv.intermora= Interés de mora
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
 delineacion.urbana.radicados.declara=Generar declaración
-delineacion.urbana.radicados.retencion.generar=Presentar retención
+delineacion.urbana.radicados.retencion.generar=Generar retención
 delineacion.urbana.radicados.declaracion.pdf=Generar PDF
 
 delineacion.urbana.dec.liqpriv.costdire=Costos directos de obra
@@ -28116,7 +28116,7 @@ predial.inicial.marcas.btnregresar=Regresar
 predial.inicial.marcas.btndescar=Descarga de factura vigencia actual
 predial.inicial.marcas.generar=Generar declaración
 
-impuestos.presentarDeclaracion.notaPredial=Ya se ha generado una factura por ese año gravable, ingresa al menú “facturación” para descargar la factura”, si ya fue generada una factura por ese periodo.
+impuestos.presentarDeclaracion.notaPredial=Ya se ha generado una factura por ese año gravable, ingresa al menú “facturación” para descargar la factura”.
 impuestos.presentarDeclaracion.notaOtros= Si va a generar una declaración de corrección ingrese el impuesto, año gravable y periodo de la declaración inicial presentada.
 
 
