--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28059,6 +28059,7 @@ vehiculos.detalle.tipoVeh.7=CARGA
 vehiculos.detalle.tipoVeh.8=AMBULANCIAS
 
 vehiculos.detalle.opuso.=-
+vehiculos.detalle.opuso.-=-
 vehiculos.detalle.opuso.01=Declaración
 vehiculos.detalle.opuso.02=Corrección
 vehiculos.detalle.opuso.1=Declaración
