--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5058,6 +5058,7 @@ predialuno.generales.direccion=Dirección
 predialuno.generales.calidad=Calidad sujeción
 predialuno.generales.matricula=Matrícula inmobiliaria
 predialuno.generales.cedula=Cédula catastral
+predialuno.generales.opuso=Opción de uso
 
 predialuno.datliquidacion.titulo=Datos de liquidación
 predialuno.datliquidacion.porcepropiedad=Porcentaje de propiedad
@@ -5098,6 +5099,7 @@ predialdos.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos 
 predialdos.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialdos.generales.titulodatos= Datos generales
 predialdos.generales.anigrav=Año gravable
+predialdos.generales.opuso=Opción de uso
 
 predialdos.datospredio.titulo=Datos del predio
 predialdos.datospredio.numcontrato=Número contrato de arrendamiento
@@ -5143,6 +5145,7 @@ predialtres.generales.anigrav=Año gravable
 predialtres.generales.chip=CHIP
 predialtres.generales.direccion=Dirección
 predialtres.generales.cedula=Cédula catastral
+predialtres.generales.opuso=Opción de uso
 
 predialtres.datospredio.titulo=Datos del Predio
 predialtres.datospredio.avaluo=Avalúo matriz con mejora
@@ -5192,6 +5195,7 @@ predialcuatro.generales.chip=CHIP
 predialcuatro.generales.direccion=Dirección
 predialcuatro.generales.matricula=Matrícula inmobiliaria
 predialcuatro.generales.cedula=Cédula catastral
+predialcuatro.generales.opuso=Opción de uso
 
 predialcuatro.datospredio.titulo=Datos del predio
 predialcuatro.datospredio.avaluo=Avalúo prorateado
@@ -5242,6 +5246,7 @@ predialcinco.generales.chip=CHIP
 predialcinco.generales.direccion=Dirección
 predialcinco.generales.matricula=Matrícula inmobiliaria
 predialcinco.generales.cedula=Cédula catastral
+predialcinco.generales.opuso=Opción de uso
 
 predialcinco.datliquidacion.titulo=Datos de Liquidación
 predialcinco.datliquidacion.porcepropiedad=Porcentaje de propiedad
@@ -5287,6 +5292,7 @@ predialseis.generales.chip=CHIP
 predialseis.generales.direccion=Dirección
 predialseis.generales.matricula=Matrícula inmobiliaria
 predialseis.generales.cedula=Cédula catastral
+predialseis.generales.opuso=Opción de uso
 
 predialseis.datliquidacion.titulo=Datos de liquidación
 predialseis.datliquidacion.porcepropiedad=Porcentaje de propiedad
@@ -5329,6 +5335,7 @@ predialsiete.generales.chip=CHIP
 predialsiete.generales.direccion=Dirección
 predialsiete.generales.matricula=Matrícula inmobiliaria
 predialsiete.generales.cedula=Cédula catastral
+predialsiete.generales.opuso=Opción de uso
 
 predialsiete.datliquidacion.titulo=Datos de Liquidación
 predialsiete.datliquidacion.porcepropiedad=Porcentaje de propiedad
@@ -5368,6 +5375,7 @@ predialocho.generales.chip=CHIP
 predialocho.generales.direccion=Dirección
 predialocho.generales.matricula=Matrícula inmobiliaria
 predialocho.generales.cedula=Cédula catastral
+predialocho.generales.opuso=Opción de uso
 
 predialocho.datliquidacion.titulo=Datos de liquidación
 predialocho.datliquidacion.porcepropiedad=Porcentaje de propiedad
@@ -5405,6 +5413,7 @@ predial.basespresun.generales.titulodatos= Datos generales
 predial.basespresun.generales.anigrav=Año gravable
 predial.basespresun.generales.direccion=Dirección
 predial.basespresun.generales.matricula=Matrícula inmobiliaria
+predial.basespresun.generales.opuso=Opción de uso
 
 predial.basespresun.datospredio.titulo=Datos del predio
 predial.basespresun.datospredio.areterreno=Área de terreno (m2)*
