Predial - Funcionalidad para pruebas (presentar declaracion, pagar en linea)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28087,6 +28087,11 @@ predial.inicial.table.matinmo=Matricula inmobiliaria
 predial.inicial.table.dir=Dirección del predio
 predial.inicial.table.nocotrato=No. Contrato arrendamiento
 predial.inicial.table.ver=Ver
+predial.inicial.table.detalle=Detalle
+predial.inicial.table.TotalPagar=Total a pagar
+predial.inicial.table.presentarDeclaracion=Presentar declaración
+predial.inicial.table.totalPagar=Total a pagar:
+predial.inicial.table.pagarEnLinea=Pagar en linea
 
 predial.inicial.juridicos.titulo= Datos jurídicos
 predial.inicial.juridicos.tipdoc=Tipo de documento
