Ajustes en el log de gestion bancaria.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4022,8 +4022,11 @@ text.account.profile.ica=ICA
 
 conciliaciones.upload.messages.success=El archivo {0} ha sido procesado correctamente
 conciliaciones.upload.messages.error=El archivo {0} ha sido procesado incorrectamente
+conciliaciones.upload.messages.error.firma=El archivo {0} ha sido procesado incorrectamente. {1}
+conciliaciones.upload.messages.error.extension=El archivo {0} debe tener la extensión {1}
 conciliaciones.upload.messages.ws.fileConcilia.success= {0}
 conciliaciones.upload.messages.ws.fileConcilia.error= {0}
+conciliaciones.upload.messages.ws.fileConcilia.error.servicio= El servicio de conciliacion no responde {0}
 conciliaciones.download.file.messages.error= {0}
 conciliaciones.download.file.messages.success = {0}
 
