Customer Service - Char - Backoffice Addon

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_en.properties
@@ -26,3 +26,5 @@
 #
 # yourcustomlocalekey=value
 dummy=dummy
+com.hybris.backoffice.perspectiveChooser.sdh.customer.service.chat=Custom Service (Chat1)
+com.sdh.widgets.sdhbackofficewidget.sdh.customer.service.chat=Custom Service (Chat2)
