--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_es.properties
@@ -26,3 +26,6 @@
 #
 # yourcustomlocalekey=value
 dummy=ficticio
+com.hybris.backoffice.perspectiveChooser.sdh.customer.service.chat=Custom Service (Chat1)
+com.sdh.widgets.sdhbackofficewidget.sdh.customer.service.chat=Custom Service (Chat2)
+
