--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_en.properties
@@ -19,3 +19,4 @@ dummy=dummy
 
 hmc.tab.sdh.properties=SDH
 hmc.tab.sdh.administration=Información del contribuyente
+sdh.customer.service.chat=Custom Service (Chat)
