--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_es.properties
@@ -19,3 +19,4 @@ dummy=ficticio
 
 hmc.tab.sdh.properties=SDH
 hmc.tab.sdh.administration=Información del contribuyente
+sdh.customer.service.chat=Atencion al cliente (Chat)
