Se agregan cambios para Calidad y boton de liquidación predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5092,7 +5092,7 @@ predialuno.firma.titulo=Información firma del declarante
 predialuno.firma.tipiden=Tipo de Identificación
 predialuno.firma.noiden=No. Identificación
 predialuno.firma.nombre=Apellidos y Nombres o Razón social
-predialuno.firma.presendecla=Generar Declaración vigencia actual
+predialuno.firma.presendecla=Presentar declaración
 predialuno.firma.paglinea=Pagar en línea
 predialuno.firma.spac=SPAC
 
@@ -5135,7 +5135,7 @@ predialdos.firma.titulo=Información firma del declarante
 predialdos.firma.tipiden=Tipo de Identificación
 predialdos.firma.noiden=No. Identificación
 predialdos.firma.nombre=Apellidos y Nombres o Razón social
-predialdos.firma.presendecla=Generar Declaración vigencia actual
+predialdos.firma.presendecla=Presentar declaración
 predialdos.firma.paglinea=Pagar en línea
 predialdos.firma.spac=SPAC
 
@@ -5184,7 +5184,7 @@ predialtres.firma.titulo=Información firma del declarante
 predialtres.firma.tipiden=Tipo de Identificación
 predialtres.firma.noiden=No. Identificación
 predialtres.firma.nombre=Apellidos y Nombres o Razón social
-predialtres.firma.presendecla=Generar Declaración vigencia actual
+predialtres.firma.presendecla=Presentar declaración
 predialtres.firma.paglinea=Pagar en línea
 predialtres.firma.spac=SPAC
 
@@ -5235,7 +5235,7 @@ predialcuatro.firma.titulo=Información firma del declarante
 predialcuatro.firma.tipiden=Tipo de Identificación
 predialcuatro.firma.noiden=No. Identificación
 predialcuatro.firma.nombre=Apellidos y Nombres o Razón social
-predialcuatro.firma.presendecla=Generar Declaración vigencia actual
+predialcuatro.firma.presendecla=Presentar declaración
 predialcuatro.firma.paglinea=Pagar en línea
 predialcuatro.firma.spac=SPAC
 
@@ -5281,7 +5281,7 @@ predialcinco.firma.titulo=Información firma del declarante
 predialcinco.firma.tipiden=Tipo de Identificación
 predialcinco.firma.noiden=No. Identificación
 predialcinco.firma.nombre=Apellidos y Nombres o Razón social
-predialcinco.firma.presendecla=Generar Declaración vigencia actual
+predialcinco.firma.presendecla=Presentar declaración
 predialcinco.firma.paglinea=Pagar en línea
 predialcinco.firma.spac=SPAC
 
@@ -5324,7 +5324,7 @@ predialseis.firma.titulo=Información firma del declarante
 predialseis.firma.tipiden=Tipo de Identificación
 predialseis.firma.noiden=No. Identificación
 predialseis.firma.nombre=Apellidos y Nombres o Razón social
-predialseis.firma.presendecla=Generar Declaración
+predialseis.firma.presendecla=Presentar declaración
 predialseis.firma.paglinea=Pagar en línea
 predialseis.firma.spac=SPAC
 
@@ -5364,7 +5364,7 @@ predialsiete.firma.titulo=Información firma del declarante
 predialsiete.firma.tipiden=Tipo de Identificación
 predialsiete.firma.noiden=No. Identificación
 predialsiete.firma.nombre=Apellidos y Nombres o Razón social
-predialsiete.firma.presendecla=Generar Declaración
+predialsiete.firma.presendecla=Presentar declaración
 predialsiete.firma.paglinea=Pagar en línea
 predialsiete.firma.spac=SPAC
 
@@ -5405,7 +5405,7 @@ predialocho.firma.titulo=Información firma del declarante
 predialocho.firma.tipiden=Tipo de Identificación
 predialocho.firma.noiden=No. Identificación
 predialocho.firma.nombre=Apellidos y Nombres o Razón social
-predialocho.firma.presendecla=Generar Declaración
+predialocho.firma.presendecla=Presentar declaración
 predialocho.firma.paglinea=Pagar en línea
 predialocho.firma.spac=SPAC
 
@@ -5453,7 +5453,7 @@ predial.basespresun.firma.titulo=Información firma del declarante
 predial.basespresun.firma.tipiden=Tipo de Identificación
 predial.basespresun.firma.noiden=No. Identificación
 predial.basespresun.firma.nombre=Apellidos y Nombres o Razón social
-predial.basespresun.firma.presendecla=Generar Declaración vigencia actual
+predial.basespresun.firma.presendecla=Presentar declaración
 predial.basespresun.firma.paglinea=Pagar en línea
 predial.basespresun.firma.spac=SPAC
 
