Se agregan cambios para Predial, en vez de tomar el Tipo de Registro, se toma el Tipo de Declaración para determinar la pantalla del liquidador a mostrar

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5050,7 +5050,7 @@ declaracion.inicial.titulo= Declaraciones
 
 #Se agrega impuesto predial  María Luisa
 
-predialuno.generales.tituloImpuesto=Impuestos de Predial
+predialuno.generales.titulo=Impuestos de Predial
 predialuno.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
 predialuno.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 
