--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28137,6 +28137,9 @@ predial.inicial.marcas.generar=Generar declaración vigencia actual
 impuestos.presentarDeclaracion.notaPredial=Ya se ha generado una factura por ese año gravable, ingresa al menú “facturación” para descargar la factura”.
 impuestos.presentarDeclaracion.notaOtros= Si va a generar una declaración de corrección ingrese el impuesto, año gravable y periodo de la declaración inicial presentada.
 
+text.account.profile.registroretenciones=Registro de Retenciones
+text.declaracion.predial= Declaración Predial
+
 
 
 
