Se agregan cambios para mostrar la descripción del tipo de valla en tabla de publicidad para estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28142,6 +28142,12 @@ text.account.profile.registroretenciones=Registro de Retenciones
 text.declaracion.predial= Declaración Predial
 
 
+destino.idTipValla.01 =Pantalla LED
+destino.idTipValla.02 =Valla Tubular de Obra
+destino.idTipValla.03 =Valla de Obra Convencional
+destino.idTipValla.04 =Valla Tubular Comercial
+destino.idTipValla.05=Valla Tubular Comercial
+destino.idTipValla.=-
 
 
 
