--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5073,7 +5073,7 @@ predialuno.datliquidacion.basegrav=Base gravable
 
 predialuno.liquidacionpriv.titulo=Liquidación privada
 predialuno.liquidacionpriv.aporte=¿Desea realizar aporte voluntario? 
-predialuno.liquidacionpriv.aceptaFactura= No estoy de acuerdo con mi factura.
+predialuno.liquidacionpriv.aceptaFactura= No estoy de acuerdo con la información registrada en mi factura.
 predialuno.liquidacionpriv.proyecto=Proyecto
 predialuno.liquidacionpriv.valimp=Valor impuesto a cargo
 predialuno.liquidacionpriv.descuento=Descuento por incremento diferencial
