Se agregan cambios para obligaciones pendientes en la tabla de ICA y se agrega botón de imprimir reporte

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3554,6 +3554,7 @@ obligacion.inicial.selcimpuesto= Impuesto
 obligacion.inicial.periodo= Periodo
 obligacion.inicial.cancelar= Cancelar
 obligacion.inicial.buscar= Buscar
+obligacion.inicial.imprimir= Imprimir reporte
 
 obligacion.inicial.predio.chip = CHIP
 obligacion.inicial.predio.matricula = Matrícula Inmobiliaría
@@ -28148,6 +28149,7 @@ destino.idTipValla.03 =Valla de Obra Convencional
 destino.idTipValla.04 =Valla Tubular Comercial
 destino.idTipValla.05=Valla Tubular Comercial
 destino.idTipValla.=-
+
 
 
 
